# for display continuity sake please use 2 spaces instead of tabs

2012-05-04 ede
  * probably bugfix 3521940: "Trouble with opening several shapefiles from one zip file"
    https://sourceforge.net/tracker/?func=detail&aid=3521940&group_id=118054&atid=679906
    - Note to us all: whoever wrote the JUMPReader code was either ingenious or mad or both at  the same time
       we should probably strip the hardcoded zip/gz support an write a proper datasource for that

2012-05-04 mmichaud <michael.michaud@free.fr>
  * switch back to 3D geometry description in info panel wkt format
    add z value to geometry description in info panel CL format
  * Add a AddGeometryAttributesPlugIn as discussed in this thread
    https://sourceforge.net/mailarchive/forum.php?thread_name=4F9E3579.9020702%40free.fr&forum_name=jump-pilot-devel

2012-05-03 ede
  "a startup overhaul draft"
  * JUMPWorkbench
    - add a stop watch output to STDOUT of the whole startup duration
    - added some messages showing up in splash screen about what is happening during startup
  * PluginManager
    - overall performance enhancement
    - duration output of scan and load of extensions to STDOUT (might be implemented more elegantly later)
    - more detailed status messages to splash screen during startup
    - extension jars now have to reside in lib/ext, subfolders are not searched anymore

2012-05-02 mmichaud <michael.michaud@free.fr>
  * Quick fix of the Class Loading problem in PluginManager (PluginManager
    now skip image files).
  * Implementation of Triangulation and Voronoi diagrams from JTS 1.12

2012-04-30 mmichaud <michael.michaud@free.fr>
  * FR #3221032 Now remember last used "Raster Image (Sextante)" directory
  * FR #3521960 Exporting large dataset in svg format now open a dialog box to
    warn the user that the export may take some times
  
2012-04-29 mmichaud <michael.michaud@free.fr>
  * Clean NoderPlugin et derived mousemenu plugins, replace processing options 