@@ -289,8 +289,13 @@ public class GMLGeometryWriter
     int dim = 2;
 
     if (coords.length > 0) {
-      if (!(Double.isNaN(coords[0].z)))
-         dim = 3;
+        // [mmichaud 2012-05-05] if there is a single z value, I want to keep it 
+        for (Coordinate c : coords) {
+            if (!(Double.isNaN(c.z))) {
+                dim = 3;
+                break;
+            }
+        }
     }
 
     boolean isNewLine = false;
